--- a/deno.json
+++ b/deno.json
@@ -1,15 +1,24 @@
 {
   "tasks": {
-    "start": "deno run -REN src/main.ts",
-    "dev": "deno serve -REN --watch src/main.ts",
-    "debug": "deno run --unstable --inspect-wait -REN src/main.ts"
+    "start": "deno run -A src/main.ts",
+    "dev": "deno serve -A --watch src/main.ts",
+    "debug": "deno run --unstable --inspect-wait -A src/main.ts"
   },
   "imports": {
     "@/": "./src/",
     "@momiji/cors": "jsr:@momiji/cors@^1.0.1",
     "@oak/oak": "jsr:@oak/oak@^17.1.3",
-    "@std/log": "jsr:@std/log@^0.224.9"
+    "@std/dotenv": "jsr:@std/dotenv@^0.225.2",
+    "@std/fs": "jsr:@std/fs@^1.0.5",
+    "@std/log": "jsr:@std/log@^0.224.9",
+    "chromadb": "npm:chromadb@^1.9.2",
+    "@types/pg": "npm:@types/pg@^8.11.10",
+    "gpt-tokenizer": "npm:gpt-tokenizer@^2.6.2",
+    "mongoose": "npm:mongoose@^8.8.2",
+    "ollama": "npm:ollama@^0.5.10",
+    "pg": "npm:pg@^8.13.1",
+    "rss-parser": "npm:rss-parser@^3.13.0",
+    "sbd": "npm:sbd@^1.0.19"
   },
-
-  "exclude": ["./drizzle", "./drizzle.config.ts"]
+  "unstable": ["cron"]
 }
